Stop overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -100,6 +100,30 @@ body {
 .card-recent-list {
   padding: 20px 10px 0 10px;
 }
+@media (min-width: 0px) and (max-width: 575px) {
+  .card-recent-list {
+    overflow-y: scroll;
+    height: 320px;
+  }
+}
+@media (min-width: 576px) and (max-width: 767px) {
+  .card-recent-list {
+    overflow-y: scroll;
+    height: 320px;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .card-recent-list {
+    overflow-y: scroll;
+    height: 320px;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .card-recent-list {
+    overflow-y: scroll;
+    height: 320px;
+  }
+}
 .card-recent-list span {
   font-weight: 600;
   color: #283038;
@@ -385,6 +409,13 @@ body {
     margin-left: 0;
   }
 }
+@media (min-width: 992px) and (max-width: 1199px) {
+  .main-wrapper-header {
+    width: 100%;
+    padding: 30px;
+    margin-left: 0;
+  }
+}
 .main-wrapper-header-title h2 {
   font-size: 30px;
   color: #283038;
@@ -526,7 +557,8 @@ body {
 @media (min-width: 0px) and (max-width: 575px) {
   .main-wrapper-cards-grid.card-grid__four {
     overflow-x: scroll;
-    gap: 20px;
+    gap: 20px 0 20px;
+    padding-bottom: 15px;
   }
 }
 @media (min-width: 576px) and (max-width: 767px) {
